Fix hero alignment with flexbox

--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
     /* font-size: 18px; */
 }
 
+html, body {
+    height: 100%;
+}
+
 .wrapper {
     width: 100%;
     max-width: var(--container-width-mobile);
@@ -33,7 +37,7 @@ body {
 .header {
     margin-top: 20px;
     /* display: flex; */
-    outline: 1px solid orange;
+    /* outline: 1px solid orange; */
 }
 
 .header__nav {
@@ -70,7 +74,7 @@ body {
 .header__logos {
     display: flex;
     /* position: relative; */
-    outline: 2px solid salmon;
+    /* outline: 2px solid salmon; */
     /* align-items: space-between; */
     gap: 20px 25px;
     padding: 0;
@@ -92,38 +96,38 @@ nav svg:hover path {
 
 .hero {
     text-align: center;
-    /* outline: 1px solid red; */
-    /* position: absolute; */
-    position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    height: 100vh;
 }
 
-.hero__wrapper {
-    /* position: absolute; */
-}
-
-.hero__image {
-    position: absolute;
-    outline: 2px solid gold;
-    /* Moves to top of document */
-    /* Other positioning */
-    left: 50%;
-    translate: -50%;
+.hero__image {               /* Flex item */
+    flex: 1;
     z-index: -1;
     margin: 0;
     padding: 0;
-    /* outline: 1px solid lime;  */
+    outline: 4px solid lime; 
+}
+
+.image__wrapper {
+    height: 400px;
 }
 
 .hero__image img {
-    max-width: 100%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    translate: -50%;
+    /* max-width: 100%; */
 }
 
-.hero__text {
-    margin-top: 95%;
+.hero__text {                   /* Flex item */
+    /* margin-top: 95%; */
+    flex: 1;
     text-align: center;
-    outline: 1px solid red;
+    outline: 4px solid red;
+
 }
 
 .hero__headline {
